fixed header spacing

--- a/wp-content/themes/mg-theme/dev/src/scss/base/_typography.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/base/_typography.scss
@@ -22,6 +22,11 @@ h1, h2, h3, h4, h5, h6{
   font-family: 'Akrobat', sans-serif;
   font-style: normal;
   margin: 0;
+  @media(max-width:575px){
+    br{
+      display: none;
+    }
+  }
 }
 
 h1{
